# openavc-simulator

./: .gitignore  README.md  pyproject.toml
simulator/: __init__.py  __main__.py  _runtime.py  api.py  base.py  engine.py  http_simulator.py  network_conditions.py  scaffold.py  server.py  tcp_simulator.py  yaml_auto.py
web/: package.json
web/src/: App.tsx  styles.css
web/src/components/: DeviceCard.tsx  NetworkConditions.tsx  ProtocolLog.tsx
web/src/components/devices/: AudioPanel.tsx  CameraPanel.tsx  DisplayPanel.tsx  GenericPanel.tsx  ProjectorPanel.tsx  SwitcherPanel.tsx
web/src/store/: api.ts  useSimStore.ts
